--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -20,6 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
                 "src/assets",
+                "src/data",
                 {
                   "glob": "**/*",
                   "input": "public"
